--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -44,14 +44,14 @@
               <span class="caret"></span>
             </a>
             <ul class="dropdown-menu" role="menu">
-              <li><%= link_to 'Profile', edit_user_registration_path %></li>
+              <li><%= link_to 'Profile', edit_user_path(current_user)%></li>
               <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
              
             </ul>
           </li>
         <% else %>
           <li><%= link_to 'Log In', new_user_session_path %></li>
-          <!-- <li><%= link_to 'Sign Up', new_user_registration_path %></li> -->
+        
         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
