--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -17,7 +17,7 @@
       <% if user_signed_in? %>
         <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "Products", products_path %></li>
-          <li><%= link_to "Sales", sales_path %></li>
+          <li><%= link_to 'New sale', new_ticket_path(@ticket) %></li>
         <% if current_user.has_role? :admin %>
           <li><%= link_to "User", users_path %></li>
         <% end %>
