--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -15,29 +15,17 @@
   <%= f.fields_for :sales do |ts|%>
     <%= render 'sale_fields', :f => ts %>
   <% end %>
-   <div class='links'>
-      <%= link_to_add_association 'add sale', f, :sales %>
-    </div>
-  </div>
-  
+  <%= link_to_add_association 'add sale', f, :sales %><br><br> 
   <div class="field">
-    <%= f.label :subtotal %><br>
+    <%= f.label :subtotal %>
     <%= f.text_field :subtotal %>
-  </div>
-  <div class="field">
-    <%= f.label :total %><br>
+    <%= f.label :total %>
     <%= f.text_field :total %>
-  </div>
-  <div class="field">
-    <%= f.label :pay_with %><br>
+    <%= f.label :pay_with %>
     <%= f.text_field :pay_with %>
-  </div>
-  <div class="field">
-    <%= f.label :change %><br>
+    <%= f.label :change %>
     <%= f.text_field :change %>
-  </div>
-  <div class="field">
-    <%= f.label :status %><br>
+    <%= f.label :status %>
     <%= f.number_field :status %>
   </div>
   
