implement jquery in new sales

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -12,6 +12,10 @@
   <% end %>
 
   <div class="field">
+    <%= f.label :bar_code %><br>
+    <%= f.text_field :bar_code %>
+  </div>
+  <div class="field">
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
