--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -11,12 +11,41 @@
     </div>
   <% end %>
   
+  <div class="row">
+  	<div id="SaleContainer">
+  	 <div class="col-md-4">
+	  	 <div id="addProductoContainer">
+	    	<input type="text" name="codebarproduct" id="codebarproduct" placeholder="Insert Barcode"/>
+	    	<input type="number" name="quantityproduct" id="quantityproduct" placeholder="Quantity">
+		</div>
+	</div>
+  <div class="col-md-8">
+  Name:<span class="label label-default" id="productname"></span>
+  Price: <span class="label label-default" id="productprice"></span>
+  Quantity: <span class="label label-default" id="productquantity"></span>
+  Total: <span class="label label-default" id="producttotal"></span>
 
-  <%= f.fields_for :sales do |ts|%>
-    <%= render 'sale_fields', :f => ts %>
-  <% end %>
-  <%= link_to_add_association 'add sale', f, :sales %><br><br> 
-  <div class="field">
+  <!--	 <table class="table" >
+  	 <thead>
+	  <tr>
+	    <th>Barcode</th>
+	    <th>Product</th>
+	    <th>Price</th>
+	    <th>Quantity</th>
+	  </tr>
+	  </thead>
+	  <tr>
+	    <td>Eve</td>
+	    <td>Jackson</td>
+	    <td>94</td>
+	    <td>94</td>
+	  </tr>
+	</table> 
+  </div>
+</div>-->
+</div>
+<div class="row">
+<div class="col-md-12">
     <%= f.label :subtotal %>
     <%= f.text_field :subtotal %>
     <%= f.label :total %>
@@ -25,11 +54,11 @@
     <%= f.text_field :pay_with %>
     <%= f.label :change %>
     <%= f.text_field :change %>
-    <%= f.label :status %>
-    <%= f.number_field :status %>
   </div>
   
  <div class="actions">
     <%= f.submit %>
   </div>
+</div>
 <% end %>
+
