--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -36,9 +36,9 @@
     </div>
   </div>
   <br>
-    <div class="row">
+    <div id="line_items"  class="row">
       <div class="col-md-12">
-        <div id="line_items" class="panel panel-default">
+        <div class="panel panel-default">
                 <%= link_to_add_association 'add product', f, :sales, :class => 'btn btn-large btn-primary',  render_options: { wrapper: 'inline' } %>
          </div>
       </div>
