--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -18,7 +18,7 @@
             <div class="panel-body">
           	 <div id="addProductoContainer">
       	    	<input type="text" name="codebarproduct" id="codebarproduct" placeholder="Insert Barcode"/>
-      	    	<input type="number" name="quantityproduct" id="quantityproduct" placeholder="Quantity">
+      	    	<input type="number" name="quantityproduct" id="quantityproduct" placeholder="Quantity" value="1">
       	     </div>
             </div>
         </div>
