--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,13 +1,12 @@
 <%= form_for(@product) do |f| %>
   <% if @product.errors.any? %>
-    <div id="error_explanation">
+    <div id="error_explanation" class="alert alert-danger">
       <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
 
-      <ul>
       <% @product.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+        <span class="glyphicon glyphicon-exclamation-sign"></span><%= message %></br>
       <% end %>
-      </ul>
+      
     </div>
   <% end %>
 
