--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -31,6 +31,7 @@
           Price: <span class="label label-default" id="productprice"></span>
           Quantity: <span class="label label-default" id="productquantity"></span>
           Total: <span class="label label-default" id="producttotal"></span>
+          Image: <span></span>
         </div>
        </div>
      </div>
@@ -44,17 +45,17 @@
       </div>
     </div>
    <br>   
-   <div class="panel panel-default">
+   <div class="panel panel-primary">
     <div class="panel-body">
       <div class="col-md-12">
           <%= f.label :subtotal %>
-          <%= f.number_field :subtotal, min:1,  step: 2, :required => true  %>
+          <%= f.number_field :subtotal, min:1,  step: 2, :required => true, class: 'form-control'  %>
           <%= f.label :total %>
-          <%= f.number_field :total, min:1,   step: 2, :required => true %>
+          <%= f.number_field :total, min:1,   step: 2, :required => true, class: 'form-control' %>
           <%= f.label :pay_with %>
-          <%= f.number_field :pay_with, min:1,  step: 2, :required => true%>
+          <%= f.number_field :pay_with, min:1,  step: 2, :required => true, class: 'form-control' %>
           <%= f.label :change %>
-          <%= f.number_field :change, min:0,  step: 2, :required => true %>
+          <%= f.number_field :change, min:0,  step: 2, :required => true, class: 'form-control' %>
       </div>
     </div>
   </div>  
