--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,13 +1,13 @@
 <h1>Listing Tickets</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Subtotal</th>
       <th>Total</th>
       <th>Pay with</th>
       <th>Change</th>
-      <th>Status</th>
+      <th>Total Products</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,10 +19,11 @@
         <td><%= ticket.total %></td>
         <td><%= ticket.pay_with %></td>
         <td><%= ticket.change %></td>
-        <td><%= ticket.status %></td>
-        <td><%= link_to 'Show', ticket %></td>
-        <td><%= link_to 'Edit', edit_ticket_path(ticket) %></td>
-        <td><%= link_to 'Destroy', ticket, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to ticket.sales.count, ticket %></td>
+        <% if current_user.has_role? :admin %>
+          <td><%= link_to 'Edit', edit_ticket_path(ticket) %></td>
+          <td><%= link_to 'Destroy', ticket, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
