--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -17,5 +17,16 @@
 @import "bootstrap"
 
 
+#notice 
+  color: green
+
+.errors
+  color: red
+
+.field_with_errors 
+  @extend .has-error
+
+
+
 
 
