--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,22 +8,21 @@
 <div class="row">
   <% @products.each do |product| %>
       <div class="col-xs-6 col-md-3">
-      <%= link_to edit_product_path(product), :class=>"thumbnail" do %>
-           <%=image_tag product.photo.to_s%>
-        <%end%>
-       <div class="caption">
-           <h4><%= product.name %></h4>
-           <p>Barcode:</p> 
-           <h4><%= product.bar_code %>
-           <p>Price:</p> 
-           <h4><%= product.price %>
-           <p>Stock:</p>
-           <h4><%= product.stock %></h4>
-       </div>
-      </br>
-      </br>
-      </div>
+          <%= link_to edit_product_path(product), :class=>"thumbnail" do %>
+               <%=image_tag product.photo.to_s %>
+            <%end%>
+               <h2 class="h3">
+                 <%= product.name %>
+               </h2>
+               <h2 class="h3">
+                <small> Price:</small>
+                 <%= product.price %>
+               </h2>
+              <h2 class="h3">
+                <small>Stock:</small>
+                <%= product.stock %> 
+              </h2>
+           
+        </div>
   <% end %>
 </div>
-
-
