--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -27,15 +27,20 @@
      <div class="col-md-6">
        <div class="panel panel-default">
         <div class="panel-body">
-          <img id="productimage" src="http://placehold.it/304x236?text=No+Product">
-          Stock: <span class="label label-default" id="productstock"></span>
-          <br>
-          <br>
+          <div class="col-md-4">
+            <img id="productimage" src="/uploads/product/photo/default/noProduct.png", width="150" height="75">  
+          </div>
+          <div class="col-md-8">
+             Stock: <span class="label label-default" id="productstock"></span>
           Name:<span class="label label-default" id="productname"></span>
+          <br>
+          <br>
           Price: <span class="label label-default" id="productprice"></span>
           Quantity: <span class="label label-default" id="productquantity"></span>
           Total: <span class="label label-default" id="producttotal"></span>
-        </div>
+        
+          </div>
+         </div>
        </div>
      </div>
     </div>
@@ -65,25 +70,5 @@
  <div class="actions">
     <%= f.submit %>
 </div>
-
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-
 <% end %>
 
