--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,27 +2,33 @@
 
 <h1>Listing Products</h1>
 </br>
+
 <%= link_to 'New Product', new_product_path %>
 </br>
 </br>
+
 <div class="row">
   <% @products.each do |product| %>
       <div class="col-xs-6 col-md-3">
           <%= link_to edit_product_path(product), :class=>"thumbnail" do %>
-               <%=image_tag product.photo.to_s %>
+               <%=image_tag product.photo.url :thumb, :size => '260x180' %>
             <%end%>
                <h2 class="h3">
                  <%= product.name %>
                </h2>
                <h2 class="h3">
                 <small> Price:</small>
-                 <%= product.price %>
+                 <%= number_to_currency( product.price) %>
                </h2>
               <h2 class="h3">
                 <small>Stock:</small>
                 <%= product.stock %> 
               </h2>
-           
         </div>
-  <% end %>
+<% end %>
+
+<div class="col-xs-12 pagination text-center">
+  <%= will_paginate @products, renderer: BootstrapPagination::Rails %>
+</div>
+
 </div>
