--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -1,3 +1,8 @@
+<div ng-app="PointOfSales"> 
+<section>
+	<h1>Seller <%= current_user.alias %></h1>
+</section>
+
 <article ng-controller="ProductSearchController">
 	<section class="search-form">
 	<header>
@@ -10,33 +15,108 @@
 		
 		</form>
 	</section>
-	<div class="col-md-8">
-	<section class="search-results">
-		<header>
-			<h1 class="h3">Results</h1>
-		</header>
-		<ol class="list-group" ng-repeat="product in products">
-				<li class="list-group-item clearfix">
-				    <h2 class="pull-right"> {{product.bar_code}}</h2>
-					<h2>{{product.name }} </h2>
-					<img ng-src={{product.photo.thumb.url}} class="img-rounded" />
-					<h3 class="pull-right">Brand:  {{product.brand}} </h3>
-					<h3 >Price: {{product.price }}</h3>
-					<h3 >Stock: {{product.stock}}</h3>
-					<button class="pull-right btn btn-primary" ng-click="addListItem(product.id, product.price)">AddList</button>
-				</li>
-		</ol>
-	</section>
+	<div class="col-md-6">
+		<section class="search-results">
+			<header>
+				<h1 class="h3">Results</h1>
+			</header>
+			<ol class="list-group" ng-repeat="product in productssearch">
+					<li class="list-group-item clearfix">
+					    <h2 class="pull-right"> {{product.bar_code}}</h2>
+						<h2>{{product.name }} </h2>
+						<img ng-src={{product.photo.thumb.url}} class="img-rounded" />
+						<h3 class="pull-right">Brand:  {{product.brand}} </h3>
+						<h3 >Price: {{product.price }}</h3>
+						<h3 >Stock: {{product.stock}}</h3>
+						<button class="pull-right btn btn-primary" 
+							ng-click="addListItem(product.id, <%= current_user.id %>, product.price)">Add
+						</button>
+					</li>
+			</ol>
+		</section>
 	</div>
-	<div class="col-md-4">
-		<section class="item-sales">
-			<h1 class="h3">Sales</h1>
-
+	<div class="col-md-6">
+		<section>
+			<header>
+				<h1 class="h3">List Products</h1>
+				<div ng-repeat="t in ticket">
+					<div ng-repeat="s in t.sales">
+							<li class="list-group-item clearfix">
+							    <h2>{{s.id}} </h2>
+							    <h2>{{s.product.name}} </h2>
+							    <h2>{{s.product.price}} </h2>
+								<button class="pull-right btn btn-primary" ng-click="deleteItemProduct(s.id, ticket, t.id)">Delete
+							</button>
+							</li>
+						 	<br>
+					 </div>
+				</div>
+			</header>
 		</section>
 	</div>
 	<div class="col-md-12">
 		<section>
-			
-		</section>
-	</div>
+		<div ng-repeat="t in ticket" class="list-group-item clearfix">
+			<header>
+				<h1 class="h3">Ticket number {{t.id}}</h1>
+			</header>
+
+		    <div class="form-group">
+	            <div class="col-md-3">
+	            <label class="control-label">Total</label>
+	                <h1 class="h5">{{t.total}}</h1>
+	            </div>
+	       		<div class="col-md-3">
+	            <label class="control-label">Subtotal</label>
+	       		    <h1 class="h5">{{t.subtotal}}</h1>
+	            </div>
+	            <div class="col-md-3">
+	            <label class="control-label">Paywith</label>
+	               <input type="text" class="form-control" ng-model="t.pay_with" placeholder="Product"/>
+	            </div>
+	        </div>
+	        <hr/>
+	    </div>
+	    </section>	
+    </div>
 </article>
+</div>
+<!-- <div ng-repeat="sales in ticket.sales">
+    <div ng-hide="sales._destroy">
+        <div class="form-group">
+            <label class="control-label col-md-2">Address 1 </label>
+            <div class="col-md-3">
+                <input type="text" class="form-control" ng-model="address.street1" placeholder="Address 1"/>
+            </div>
+            <label class="control-label col-md-2">Address 2 </label>
+            <div class="col-md-3">
+                <input type="text" class="form-control" ng-model="address.street2" placeholder="Address 2"/>
+            </div>
+            <div class="col-md-2">
+                <a ng-click="removeAddress($index, user)" class="btn btn-xs btn-danger">X</a>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-md-2">City </label>
+            <div class="col-md-3">
+                <input type="text" class="form-control" ng-model="address.city" placeholder="Pune"/>
+            </div>
+            <label class="control-label col-md-2">State </label>
+            <div class="col-md-3">
+                <input type="text" class="form-control" ng-model="address.state" placeholder="MH"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-md-2">Country</label>
+            <div class="col-md-3">
+                <input type="text" class="form-control" ng-model="address.country" placeholder="India"/>
+            </div>
+            <label class="control-label col-md-2">Zipcode </label>
+            <div class="col-md-3">
+                <input type="text" class="form-control" ng-model="address.zipcode" placeholder="12345"/>
+            </div>
+        </div>
+        <hr/>
+    </div>
+</div>
+ -->
