--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_for(@product) do |f| %>
+<%= form_for @product, :html => {:class => "panel-footer"}  do |f| %>
+ <fieldset>
   <% if @product.errors.any? %>
     <div id="error_explanation" class="alert alert-danger">
       <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
@@ -13,38 +14,51 @@
   
   <div class="form-group">
     <%= f.label :bar_code %><br>
-    <%= f.text_field :bar_code, class: 'form-control'%>
+    <%= f.text_field :bar_code, autofocus: true, class: 'form-control'%>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :name %><br>
     <%= f.text_field :name, class: 'form-control'%>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :brand %><br>
     <%= f.text_field :brand, class: 'form-control' %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :dateofexpiry %><br>
     <%= f.date_select :dateofexpiry, class: 'form-control' %>
   </div>
-  <div class="field">
+  <div class="form-group">
+    <%= f.label :stock %><br>
+    <%= f.number_field :stock, class: 'form-control' %>
+  </div>
+  <div class="form-group">
+    <%= f.label :price %><br>
+    <%= f.number_field :price, class: 'form-control', step: :any  %>
+  </div>
+  <div class="form-group">
+    <%= f.label :purchaseprice %><br>
+    <%= f.number_field :purchaseprice, class: 'form-control', step: :any %>
+  </div>
+  
+  <div class="form-group">
     <%= f.label :minstock %><br>
     <%= f.number_field :minstock, class: 'form-control' %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :maxstock %><br>
     <%= f.number_field :maxstock, class: 'form-control' %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :description %><br>
     <%= f.text_area :description, class: 'form-control' %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :photo %>
     <%= f.file_field :photo, accept: 'image/png,image/gif,image/jpeg', class: "filestyle" %>
   </div>
-  <div class="actions">
+  <div class="form-group">
     <%= f.submit class: "btn btn-success"%>
   </div>
-
+</fieldset>
 <% end %>
