--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,26 +1,26 @@
-<%= form_for(@user) do |f| %>
+<%= form_for @user, :html => {:class => "panel-footer"} do |f| %>
 <% if @user.errors.any? %>
     <div id="error_explanation"  class="alert alert-danger">
       <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
       <ul>
       <% @user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
+        <span class="glyphicon glyphicon-exclamation-sign"></span><%= message %></br>
+       <% end %>
       </ul>
     </div>
   <% end %>
-   <div class="field">
+   <div class="form-group">
     <%= f.label :alias %><br>
-    <%= f.text_field :alias %>
+    <%= f.text_field :alias, autofocus: true, class: 'form-control' %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :username %><br>
-    <%= f.text_field :username %>
+    <%= f.text_field :username, class: 'form-control' %>
   </div>
 
-   <div class="field">
+   <div class="form-group">
     <%= f.label :email %><br>
-    <%= f.text_field :email %>
+    <%= f.text_field :email, class: 'form-control' %>
   </div>
   
   <div class="field">
@@ -30,17 +30,17 @@
     <%= role.name %>
   <% end %>
   </div>
- <div class="field">
+ <div class="form-group">
     <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+    <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "btn btn-success" %>
   </div>
 <%end %>
